feat: DATA-2079 add GM to distribution